--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+     font-family: "Parkinsans", sans-serif;
+     
+}
